Fix heart-icon cropping. Add max and min length to new card title inputs

--- a/src/blocks/element.css
+++ b/src/blocks/element.css
@@ -26,6 +26,7 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 1.2;
+  max-width: 221px;
 
   text-overflow: ellipsis;
   white-space: nowrap;
